fix: modify text size and element alignment and add responsive style

--- a/styles/saveannual/style.css
+++ b/styles/saveannual/style.css
@@ -29,9 +29,7 @@
   }
   .itemSnpage .price b {
     padding-right: 6px;
-    /*width: 100%;*/
     float: left;
-    font-size: 15px;
     color: #198754;
   }
 
@@ -96,11 +94,6 @@
   }
 }
 
-@media (max-width: 991.98px) {
-  .oaymentSnpage .itemSnpage .left-section {
-    justify-content: center !important;
-  }
-}
 @media (max-width: 991.98px) {
   .oaymentSnpage .itemSnpage .price {
     font-size: 18px;
@@ -2269,4 +2262,13 @@ i.special-tooltip.fa-solid.fa-circle-info {
 }
 .password-wrapper i.fa-solid.ischecked {
   display: block !important;
+}
+
+@media screen and (max-width: 545px) {
+  .oaymentSnpage .itemSnpage > span {
+    width: 210px;
+  }
+  .oaymentSnpage .itemSnpage {
+    flex-wrap: wrap;
+  }
 }
